# oop6

./: CMakeLists.txt  factory.h  main.cpp  npc.cpp  npc.h  observer.cpp  observer.h  orc.cpp  orc.h  outlaw.cpp  outlaw.h  tests.cpp  visitor.h  werewolf.cpp  werewolf.h
